# stars-service

./: Dockerfile  README.md  docker_build_stars_service.sh  docker_run_stars_service.sh  run
client/: test.py
json/: example.json  example_tatc.json  test_orbit_1.json  test_orbit_2.json  test_orbit_3.json  test_orbit_4.json  test_orbit_5.json  test_orbit_6.json
server/: build  cmd.sh  stars_app_build.sh  start_stars_server.py
server/static/: index.html  style.css
server/swagger/: swagger.yaml  swagger.yaml.old
server/swagger_server/: __main__.py
server/swagger_server/controllers/: job_controller.py  service_controller.py
server/swagger_server/models/: __init__.py  job.py  job_info.py  job_list.py  job_output.py  job_output_request.py  job_status.py  service_info.py  simulation_config.py
server/swagger_server/swagger/: swagger.yaml
server/sys/: template.json
server/templates/: index.html
sys/: Dockerfile  nsswitch.conf
translator/: CMakeLists.txt  plot_testing.py  stars.cpp  stars.template  stars_template.cpp  subroutines.pl  translate.pl
workspace/sys/: stars.cc  stars.out
